GNOME Bugzilla – Bug 721394
GtkAboutDialog does not emit activate-link signal in credits section
Last modified: 2014-01-04 19:07:39 UTC
Created attachment 265219 [details] [review] Patch to solve "activate-link" signal configuration I would like to override default link handler in GtkAboutDialog, which is gtk_show_uri(). Toto this i created pseudocode like this: GtkWidget *dialog; dialog = gtk_about_dialog_new(); g_signal_connect (dialog, "activate-link", G_CALLBACK (activate_link_lcb), NULL); In the callback activate_link_lcb() I have code that handles clicking on the link. The problem is, that default handler is overriden in website and license sections, but in credits section it is not. The solution is to connect "activate-link" signal to the labels that are created in add_credits_section() function. Simple patch is in attached file. Andrius