GtkAboutDialog: be consistent about link activation

As pointed out in
https://bugzilla.gnome.org/show_bug.cgi?id=721394,
links in the credits part were not going through the
::link-activated signal. Fix that.